# try-rust

./: Cargo.toml
file_transfer/: Cargo.toml
file_transfer/src/: main.rs
json_dynamic/: Cargo.toml
json_dynamic/src/: main.rs
json_static/: Cargo.toml
json_static/src/: main.rs
postgresql_example/: Cargo.toml
postgresql_example/src/: main.rs
redis_example/: Cargo.toml
redis_example/src/: main.rs
sqlite_example/: Cargo.toml
sqlite_example/src/: main.rs
strsplit/: Cargo.toml
strsplit/src/: lib.rs
toml_dynamic/: Cargo.toml
toml_dynamic/src/: main.rs
toml_static/: Cargo.toml
toml_static/src/: main.rs
transformer/: Cargo.toml
transformer/src/: main.rs
use_env_logger/: Cargo.toml
use_lazy_static/: Cargo.toml
use_rand/: Cargo.toml
use_rand/src/: main.rs
use_structopt/: Cargo.toml
use_structopt/src/: main.rs
xml_example/: Cargo.toml
xml_example/src/: main.rs
