[package]
name = "transformer"
version = "0.1.0"
authors = ["abdullah <44318011+fx2y@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
xml-rs = "0.8"
rusqlite = "0.23"
postgres = "0.17"
redis = "0.16"
time = "0.2"
